Add younicorns config

--- a/acme/org.yaml
+++ b/acme/org.yaml
@@ -1,18 +1,18 @@
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: acme-corp
-  description: The acme-corp organization
+  name: younicorns
+  description: The Younicorns organization
   links:
-    - url: http://www.acme.com/
+    - url: http://younicorns.io
       title: Website
     - url: https://meta.wikimedia.org/wiki/
       title: Intranet
 spec:
   type: organization
   profile:
-    displayName: ACME Corp
-    email: info@example.com
+    displayName: Younicorns
+    email: contact@younicorns.io
     picture: https://avatars.dicebear.com/api/identicon/info@example.com.svg?background=%23fff&margin=25
   children: [infrastructure]
 ---
@@ -20,13 +20,11 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-groups
-  description: A collection of all Backstage example Groups
+  description: A collection of all Younicorns Groups
 spec:
   targets:
     - ./infrastructure-group.yaml
     - ./boxoffice-group.yaml
     - ./backstage-group.yaml
     - ./team-a-group.yaml
-    - ./team-b-group.yaml
-    - ./team-c-group.yaml
-    - ./team-d-group.yaml
+
