--- a/acme/team-a-group.yaml
+++ b/acme/team-a-group.yaml
@@ -1,13 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: team-a
-  description: Team A
+  name: younicorns
+  description: Younicorns tech team
 spec:
   type: team
   profile:
     # Intentional no displayName for testing
-    email: team-a@example.com
+    email: contact@younicorns.io
     picture: https://avatars.dicebear.com/api/identicon/team-a@example.com.svg?background=%23fff&margin=25
   parent: backstage
   children: []
@@ -15,35 +15,25 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: breanna.davison
+  name: gilles.dansou
 spec:
   profile:
     # Intentional no displayName for testing
-    email: breanna-davison@example.com
+    displayName: Gilles Dansou
+    email: gilles@younicorns.io
     picture: https://avatars.dicebear.com/api/avataaars/breanna-davison@example.com.svg?background=%23fff
-  memberOf: [team-a]
+  memberOf: [younicorns]
 ---
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: janelle.dawe
+  name: jonathan.horyn
 spec:
   profile:
-    displayName: Janelle Dawe
-    email: janelle-dawe@example.com
+    displayName: Jonathan Horyn
+    email: jonathan@younicorns.io
     picture: https://avatars.dicebear.com/api/avataaars/janelle-dawe@example.com.svg?background=%23fff
-  memberOf: [team-a]
----
-apiVersion: backstage.io/v1alpha1
-kind: User
-metadata:
-  name: nigel.manning
-spec:
-  profile:
-    displayName: Nigel Manning
-    email: nigel-manning@example.com
-    picture: https://avatars.dicebear.com/api/avataaars/nigel-manning@example.com.svg?background=%23fff
-  memberOf: [team-a]
+  memberOf: [younicorns]
 ---
 # This user is added as an example, to make it more easy for the "Guest"
 # sign-in option to demonstrate some entities being owned. In a regular org,
