--- a/all-apis.yaml
+++ b/all-apis.yaml
@@ -1,14 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
-  name: example-apis
-  description: A collection of all Backstage example APIs
+  name: younicorns-apis
+  description: A collection of all Younicorns APIs
 spec:
   targets:
-    - ./apis/hello-world-api.yaml
-    - ./apis/petstore-api.yaml
-    - ./apis/spotify-api.yaml
-    - ./apis/streetlights-api.yaml
-    - ./apis/swapi-graphql.yaml
-    - ./apis/wayback-archive-api.yaml
-    - ./apis/wayback-search-api.yaml
+    - ./apis/flamingo-api.yaml
+    
